# cca-club-hub-rust-backend

./: .dockerignore  .env.sample  .gitignore  .gitpod.yml  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: ci.yml
migrations/2022-10-08-005847_create_clubs/: down.sql  up.sql
migrations/2022-10-08-013219_create_club_socials/: down.sql  up.sql
migrations/2022-10-08-013349_create_club_categories/: down.sql  up.sql
migrations/2022-10-08-014028_create_posts/: up.sql
migrations/2022-10-08-014507_create_reset_password_requests/: down.sql  up.sql
migrations/2022-10-16-182708_create_club_socials/: down.sql  up.sql
migrations/2022-10-16-184616_inital_migration/: down.sql  up.sql
src/: auth.rs  email.rs  error.rs  lib.rs  main.rs  models.rs  schema.rs
src/api/: admin.rs  auth.rs  club.rs  edit.rs  mod.rs  password.rs  reset.rs
