[package]
name = "cca_club_hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
argon2 = "0.4.1"
axum = { version = "0.5.16", features = ["headers"] }
chrono = "0.4.22"
deadpool = "0.9.5"
diesel = { version = "2.0.1", features = ["postgres"] }
diesel-async = { version = "0.1.0", features = ["deadpool", "postgres"] }
dotenv = "0.15.0"
envconfig = "0.10.0"
jsonwebtoken = "8.1.1"
lazy_static = "1.4.0"
password-hash = { version = "0.4.2", features = ["std"] }
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1.21.2", features = ["rt", "macros"] }
tower-http = { version = "0.3.4", features = ["cors"] }
