[package]
name = "cca_club_hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
argon2 = "0.4.1"
axum = { version = "0.5.17", features = ["headers"] }
chrono = "0.4.23"
deadpool = "0.9.5"
diesel = { version = "2.0.2", features = ["postgres"] }
diesel-async = { version = "0.1.1", features = ["deadpool", "postgres"] }
dotenv = "0.15.0"
envconfig = "0.10.0"
infer = "0.12.0"
itertools = "0.10.5"
jsonwebtoken = "8.1.1"
lazy_static = "1.4.0"
mime = "0.3.16"
password-hash = { version = "0.4.2", features = ["std"] }
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "sync"] }
lettre = { version = "0.10", features = ["tokio1-native-tls"] }
nanoid = "0.4.0"
tower-http = { version = "0.3.5", features = ["cors"] }
sha2 = "0.10.6"